--- a/src/main/Calculator.css
+++ b/src/main/Calculator.css
@@ -3,7 +3,5 @@
   width: 235px;
   border-radius: 5px;
   overflow: hidden;
-  display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: 48px, 48px, 48px, 48px, 48px;
+  background-color: red;
 }
